# webcodecs-node

./: .gitignore  .npmignore  .vercelignore  CMakeLists.txt  DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  README.md  binding.gyp  jest.config.js  llms.txt  mint.json  package-lock.json  package.json  tsconfig.json  typedoc.json  vercel.json  vitest.browser.config.ts  vitest.config.ts
.beads/: issues.jsonl  spec-compliance-bugs.md
.github/workflows/: ci.yml  mintlify-deploy.yml  prebuild.yml
docs/: introduction.mdx  mint.json
docs/getting-started/: installation.mdx  quick-start.mdx
docs/migration/: from-browser.mdx  from-ffmpeg-cli.mdx
examples/: basic-audio-encode.js  basic-video-encode.js  encode-decode-roundtrip.js  process-real-video.js  real-world-demo.js
native/: async_decoder.cpp  async_encoder.cpp  audio.cpp  audio.h  binding.cpp  decoder.cpp  decoder.h  encoder.cpp  encoder.h  frame.cpp  frame.h  hw_accel.cpp  hw_accel.h  util.cpp
src/: AudioData.ts  AudioDecoder.ts  AudioEncoder.ts  EncodedAudioChunk.ts  EncodedVideoChunk.ts  VideoColorSpace.ts  VideoDecoder.ts  VideoEncoder.ts  VideoFrame.ts  codec-registry.ts  index.ts  native.ts  types.ts
test/: codec-registry.test.ts  core-types.test.ts  video-decoder.test.ts  video-encoder.test.ts
test/integration/: audio-encode-decode.test.js  encode-decode.test.js  hevc-av1-encode-decode.test.js  vp8-vp9-encode-decode.test.js
test/spec-compliance/: api-surface.test.ts  audio-roundtrip.test.ts  functional.test.ts  qr-roundtrip.test.ts  setup.ts
